--- a/src/componenets/intro/intro.scss
+++ b/src/componenets/intro/intro.scss
@@ -20,7 +20,7 @@
             height: 500px;
             overflow: hidden;
             justify-content: center;
-            // border-radius: 50%;
+            border-radius: 35%;
         
             float:right;
 
